# TP4_Stitching

./: .gitignore  CMakeLists.txt
include/: MyDescriptorExtractor.hpp  MyDescriptorMatcher.hpp
src/: MyDescriptorExtractor.cpp  MyDescriptorMatcher.cpp  MyFeatureDetector.cpp  main.cpp
